base-deployments/rocketchat/patch-templates/env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
spec:
  template:
    spec:
      containers:
        - name: rocketchat
