base-deployments/rocketchat/patch-templates/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocketchat
spec:
  replicas: ${replicas}
